syntax = "proto3";

package storage;

service Storage {

  rpc Ping(PingRequest) returns (PingResponse) {}

  rpc List(ListRequest) returns (ListResponse) {}

  rpc Add(AddRequest) returns (AddResponse) {}

  rpc Remove(RemoveRequest) returns (RemoveResponse) {}

  rpc Register(RegisterRequest) returns (RegisterResponse) {}

}

message PingRequest {
}

message PingResponse {
  string msg = 1;
}

message ListRequest {
}

message ListResponse {
  repeated string data = 1;
}

message AddRequest {
  string key = 1;
}

message AddResponse {}

message RemoveRequest {
  string key = 1;
}

message RemoveResponse {}

message RegisterRequest {
  string connect_addr = 1;
}

message RegisterResponse {
  repeated string data = 1;
}
